Add content in Special part

--- a/index.html
+++ b/index.html
@@ -154,14 +154,16 @@
 
             <!-- Mail group -->
             <div class="mail-group">
-              <a href="#!" class="circle">
+              <a href="mailto:truongquangle26@gmail.com" class="circle">
                 <img
                   src="./assets/images/letter.svg"
                   alt=""
                   class="mail__letter-icon"
                 />
               </a>
-              <a href="#!" class="mail__link">hi@arif.interactive</a>
+              <a href="mailto:truongquangle26@gmail.com" class="mail__link"
+                >Send mail</a
+              >
             </div>
           </div>
         </div>
@@ -198,14 +200,13 @@
                 </h1>
                 <p class="desc hero__desc">
                   I am Truong Le, with a background in portrait, landscape,
-                  event photography, I strive to tell compelling stories through
-                  my lens. Photography, for me, is not just a profession; it's a
-                  way of life.
+                  event, I strive to tell compelling stories through my lens.
+                  Art, for me, is not just a profession; it's a way of life.
                 </p>
 
                 <!-- CTA group -->
                 <div class="hero__cta-group">
-                  <a href="tel:+84389662855" class="btn">Book a Call</a>
+                  <a href="tel:+84389662855" class="btn">Make a call</a>
                   <a
                     href="https://www.behance.net/truleq"
                     target="_blank"
@@ -321,81 +322,14 @@
 
     <main>
       <div class="container">
-        <!-- Client -->
-        <section class="client">
-          <div class="client__inner">
-            <!-- Heading -->
-            <h2 class="client__heading heading">Meet my recent clients</h2>
-
-            <!-- Client group -->
-            <div class="client-group--large">
-              <!-- Group 1 -->
-              <div class="client-group--small">
-                <img
-                  src="./assets/images/google.svg"
-                  alt="google"
-                  class="client-item"
-                />
-                <img
-                  src="./assets/images/upwork.svg"
-                  alt="upwork"
-                  class="client-item"
-                />
-              </div>
-
-              <!-- Group 2 -->
-              <div class="client-group--small">
-                <img
-                  src="./assets/images/warnerbros.svg"
-                  alt="warner bros"
-                  class="client-item"
-                />
-                <img
-                  src="./assets/images/creativecloud.svg"
-                  alt="creative cloud"
-                  class="client-item"
-                />
-              </div>
-
-              <!-- Group 3 -->
-              <div class="client-group--small">
-                <img
-                  src="./assets/images/mailchimp.svg"
-                  alt="mailchimp"
-                  class="client-item"
-                />
-                <img
-                  src="./assets/images/woocommerce.svg"
-                  alt="woocommerce"
-                  class="client-item"
-                />
-              </div>
-
-              <!-- Group 4 -->
-              <div class="client-group--small">
-                <img
-                  src="./assets/images/adobe.svg"
-                  alt="adobe"
-                  class="client-item"
-                />
-                <img
-                  src="./assets/images/canva.svg"
-                  alt="canva"
-                  class="client-item"
-                />
-              </div>
-            </div>
-          </div>
-        </section>
-
         <!-- Service -->
         <section class="service" id="service">
           <!-- Header -->
           <div class="service__header">
             <h2 class="heading">Specialties</h2>
             <p class="desc service__desc">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
-              non nisl tincidunt ut elementum turpis.
+              I specialize in fashion, portrait, landscape aiming to bring out
+              the beauty in every subject.
             </p>
           </div>
 
@@ -408,12 +342,11 @@
                   <div class="service-item__icon circle">
                     <img src="./assets/images/light-bulb.svg" alt="" />
                   </div>
-                  <h3 class="heading--small service-item__heading">
-                    Product design
-                  </h3>
+                  <h3 class="heading--small service-item__heading">Fashion</h3>
                   <p class="desc service-item__desc">
-                    Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
-                    solor ut elementum turpis.
+                    With an appreciation for style and a keen eye for detail, I
+                    create visually stunning images that showcase the elegance,
+                    creativity, and individuality of every garment.
                   </p>
                 </article>
               </div>
@@ -422,14 +355,13 @@
               <div class="col">
                 <article class="service-item">
                   <div class="service-item__icon circle">
-                    <img src="./assets/images/pencil.svg" alt="" />
+                    <img src="./assets/images/light-bulb.svg" alt="" />
                   </div>
-                  <h3 class="heading--small service-item__heading">
-                    UI/UX Design
-                  </h3>
+                  <h3 class="heading--small service-item__heading">Portrait</h3>
                   <p class="desc service-item__desc">
-                    Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
-                    solor ut elementum turpis.
+                    Whether it's a candid moment or a carefully orchestrated
+                    pose, my portrait photography is all about capturing the
+                    true essence of individuals.
                   </p>
                 </article>
               </div>
@@ -438,14 +370,15 @@
               <div class="col">
                 <article class="service-item">
                   <div class="service-item__icon circle">
-                    <img src="./assets/images/phone.svg" alt="" />
+                    <img src="./assets/images/light-bulb.svg" alt="" />
                   </div>
                   <h3 class="heading--small service-item__heading">
-                    Interactive design
+                    Landscape
                   </h3>
                   <p class="desc service-item__desc">
-                    Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
-                    solor ut elementum turpis.
+                    Nature is my canvas, and landscapes are my art. I have a
+                    deep appreciation for the natural world and a knack for
+                    capturing its breathtaking beauty.
                   </p>
                 </article>
               </div>
