Add feedback content

--- a/index.html
+++ b/index.html
@@ -593,21 +593,19 @@
             <div class="col">
               <article class="feedback-item">
                 <p class="feedback-item__content">
-                  “Duis aute irure dolor in reprehenderit in voluptate velit
-                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                  occaecat cupidatat non proident, sunt in culpa.”
+                  “Exceptional Service! I couldn't be happier with the results.
+                  The attention to detail and creativity in capturing moments is
+                  truly commendable. I highly recommend this talented
+                  photographer!”
                 </p>
                 <div class="feedback-item__info">
                   <img
-                    src="./assets/images/feedback-avatar.png"
-                    alt="Joe Elia"
+                    src="./assets/images/sarahL.png"
+                    alt="Sarah L"
                     class="feedback-item__avatar"
                   />
-                  <h3 class="feedback-item__name">Joe Elia</h3>
+                  <h3 class="feedback-item__name">Sarah L</h3>
                 </div>
-                <p class="desc feedback-item__desc">
-                  User Interface Design at PCL Lab
-                </p>
               </article>
             </div>
 
@@ -615,21 +613,19 @@
             <div class="col">
               <article class="feedback-item">
                 <p class="feedback-item__content">
-                  “Duis aute irure dolor in reprehenderit in voluptate velit
-                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                  occaecat cupidatat non proident, sunt in culpa.”
+                  “Outstanding Experience! The photographer was not only
+                  professional but also incredibly friendly and accommodating.
+                  The final photos exceeded my expectations. I'm grateful for
+                  the wonderful memories captured!”
                 </p>
                 <div class="feedback-item__info">
                   <img
-                    src="./assets/images/feedback-avatar.png"
-                    alt="John Babier"
+                    src="./assets/images/michaelK.png"
+                    alt=" Michael K"
                     class="feedback-item__avatar"
                   />
-                  <h3 class="feedback-item__name">John Babier</h3>
+                  <h3 class="feedback-item__name">Michael K</h3>
                 </div>
-                <p class="desc feedback-item__desc">
-                  User Interface Design at PCL Lab
-                </p>
               </article>
             </div>
 
@@ -637,21 +633,19 @@
             <div class="col">
               <article class="feedback-item">
                 <p class="feedback-item__content">
-                  “Duis aute irure dolor in reprehenderit in voluptate velit
-                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                  occaecat cupidatat non proident, sunt in culpa.”
+                  “Amazing Talent! Working with this photographer was a delight.
+                  They have an eye for capturing the beauty in every frame. The
+                  photos turned out stunning, and I'm grateful for their
+                  dedication to perfection!”
                 </p>
                 <div class="feedback-item__info">
                   <img
-                    src="./assets/images/feedback-avatar.png"
-                    alt="Micheall Joe"
+                    src="./assets/images/emilyH.png"
+                    alt="Emily H"
                     class="feedback-item__avatar"
                   />
-                  <h3 class="feedback-item__name">Micheall Joe</h3>
+                  <h3 class="feedback-item__name">Emily H</h3>
                 </div>
-                <p class="desc feedback-item__desc">
-                  User Interface Design at PCL Lab
-                </p>
               </article>
             </div>
 
@@ -659,21 +653,19 @@
             <div class="col">
               <article class="feedback-item">
                 <p class="feedback-item__content">
-                  “Duis aute irure dolor in reprehenderit in voluptate velit
-                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                  occaecat cupidatat non proident, sunt in culpa.”
+                  “Perfect Portraits! I needed professional portraits for my
+                  business, and I'm so glad I chose this photographer. They made
+                  me feel comfortable during the shoot, and the final images
+                  were exactly what I was looking for. Exceptional work!”
                 </p>
                 <div class="feedback-item__info">
                   <img
-                    src="./assets/images/feedback-avatar.png"
-                    alt="Ha Quoc Huy"
+                    src="./assets/images/davidM.png"
+                    alt="David M"
                     class="feedback-item__avatar"
                   />
-                  <h3 class="feedback-item__name">Ha Quoc Huy</h3>
+                  <h3 class="feedback-item__name">David M</h3>
                 </div>
-                <p class="desc feedback-item__desc">
-                  User Interface Design at PCL Lab
-                </p>
               </article>
             </div>
 
@@ -681,21 +673,19 @@
             <div class="col">
               <article class="feedback-item">
                 <p class="feedback-item__content">
-                  “Duis aute irure dolor in reprehenderit in voluptate velit
-                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                  occaecat cupidatat non proident, sunt in culpa.”
+                  “Fantastic Wedding Photos! Our wedding day was beautifully
+                  captured by this photographer. They managed to capture all the
+                  special moments and emotions, making our day even more
+                  memorable. The photos are simply breathtaking!”
                 </p>
                 <div class="feedback-item__info">
                   <img
-                    src="./assets/images/feedback-avatar.png"
-                    alt="Bellie Bumble"
+                    src="./assets/images/jessica.png"
+                    alt="Jessica"
                     class="feedback-item__avatar"
                   />
-                  <h3 class="feedback-item__name">Bellie Bumble</h3>
+                  <h3 class="feedback-item__name">Jessica</h3>
                 </div>
-                <p class="desc feedback-item__desc">
-                  User Interface Design at PCL Lab
-                </p>
               </article>
             </div>
           </div>
