--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <a href="#project" class="nav-item">Projects</a>
               </li>
               <li>
-                <a href="#stat" class="nav-item">Journey</a>
+                <a href="#stat" class="nav-item">Video</a>
               </li>
               <li>
                 <a href="#contact" class="nav-item">Contact</a>
@@ -415,24 +415,27 @@
 
           <!-- Project group -->
           <div class="project-group">
-            <div class="row row-cols-md-2 row-cols-1">
+            <div class="row row-cols-md-2 row-cols-1 align-items-center">
               <!-- Item 1 -->
               <div class="col mt-4">
                 <article class="project-item">
                   <!-- Content -->
                   <div class="projet-item__content">
-                    <h3 class="heading--small project-item__heading">
-                      Wally Website
-                    </h3>
+                    <h3 class="heading--small project-item__heading">Lovely</h3>
                     <p class="project-item__desc desc">
-                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                      A dance cover project I took for UIT's art club.
                     </p>
-                    <a href="#!" class="project-item__link">Case Study</a>
+                    <a
+                      href="https://www.behance.net/gallery/157256893/Lovely-(Dance-cover)"
+                      target="_blank"
+                      class="project-item__link"
+                      >View</a
+                    >
                   </div>
 
                   <!-- Image -->
                   <img
-                    src="./assets/images/project-01.svg"
+                    src="./assets/images/project-01.png"
                     alt="project-01"
                     class="project-item__img"
                   />
@@ -442,6 +445,7 @@
                     src="./assets/images/project-decor.svg"
                     alt=""
                     class="project-item__decor"
+                    loading="lazy"
                   />
                 </article>
               </div>
@@ -452,19 +456,25 @@
                   <!-- Content -->
                   <div class="projet-item__content">
                     <h3 class="heading--small project-item__heading">
-                      Banking App
+                      Hiphop dance
                     </h3>
                     <p class="project-item__desc desc">
-                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                      A dance cover project I took for UIT's art club.
                     </p>
-                    <a href="#!" class="project-item__link">Case Study</a>
+                    <a
+                      href="https://www.behance.net/gallery/175658167/Blackjack-Showout-Cono-(Dance-cover)"
+                      target="_blank"
+                      class="project-item__link"
+                      >View</a
+                    >
                   </div>
 
                   <!-- Image -->
                   <img
-                    src="./assets/images/project-02.svg"
+                    src="./assets/images/project-02.png"
                     alt="project-02"
                     class="project-item__img"
+                    loading="lazy"
                   />
 
                   <!-- Decor -->
@@ -482,19 +492,25 @@
                   <!-- Content -->
                   <div class="projet-item__content">
                     <h3 class="heading--small project-item__heading">
-                      Web App
+                      The endless night
                     </h3>
                     <p class="project-item__desc desc">
-                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                      A fashion video I took in 2022.
                     </p>
-                    <a href="#!" class="project-item__link">Case Study</a>
+                    <a
+                      href="https://www.behance.net/gallery/157179975/The-endless-night-(Fashion-Video)"
+                      target="_blank"
+                      class="project-item__link"
+                      >View</a
+                    >
                   </div>
 
                   <!-- Image -->
                   <img
-                    src="./assets/images/project-03.svg"
+                    src="./assets/images/project-03.png"
                     alt="project-03"
                     class="project-item__img"
+                    loading="lazy"
                   />
 
                   <!-- Decor -->
@@ -512,19 +528,25 @@
                   <!-- Content -->
                   <div class="projet-item__content">
                     <h3 class="heading--small project-item__heading">
-                      Oculus Website
+                      The outside door
                     </h3>
                     <p class="project-item__desc desc">
-                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                      A short film project I made with my team in 2021.
                     </p>
-                    <a href="#!" class="project-item__link">Case Study</a>
+                    <a
+                      href="https://www.behance.net/gallery/157185221/The-outside-door-(Short-Film)"
+                      target="_blank"
+                      class="project-item__link"
+                      >View</a
+                    >
                   </div>
 
                   <!-- Image -->
                   <img
-                    src="./assets/images/project-04.svg"
+                    src="./assets/images/project-04.png"
                     alt="project-04"
                     class="project-item__img"
+                    loading="lazy"
                   />
 
                   <!-- Decor -->
@@ -539,7 +561,12 @@
 
             <!-- CTA Btn -->
             <div class="btn-wrap">
-              <a href="#!" class="btn project__btn">All Projects</a>
+              <a
+                href="https://www.behance.net/truleq"
+                target="_blank"
+                class="btn project__btn"
+                >All Projects</a
+              >
             </div>
           </div>
         </div>
@@ -756,12 +783,14 @@
                   class="faq-item__question heading--small"
                   for="answer-toggle1"
                 >
-                  What is your hourly rate?
+                  What types of photography services do you offer?
                 </label>
 
                 <p class="faq-item__answer desc">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                  urna, non nisl tincidunt ut elementum turpis.
+                  I specialize in a variety of photography services, including
+                  portrait photography, event coverage (weddings, parties,
+                  corporate events), fashion photography, product photography,
+                  and landscape photography.
                 </p>
               </div>
               <!-- Answer toggle -->
@@ -785,11 +814,15 @@
                   class="faq-item__question heading--small"
                   for="answer-toggle2"
                 >
-                  What type of projects do you take on?
+                  How do I book a photography session?
                 </label>
                 <p class="faq-item__answer desc">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                  urna, non nisl tincidunt ut elementum turpis.
+                  Booking a session is easy! Simply contact us through our
+                  website, <a href="mailto:truongquangle26@gmail.com">email</a>,
+                  or <a href="tel:+84389662855">phone</a> to discuss your
+                  requirements and schedule a date. We'll guide you through the
+                  process, including choosing the right package, location, and
+                  any specific requests you might have.
                 </p>
               </div>
               <!-- Answer toggle -->
@@ -813,11 +846,14 @@
                   class="faq-item__question heading--small"
                   for="answer-toggle3"
                 >
-                  What time-zone do you work in?
+                  What should I wear for a portrait session?
                 </label>
                 <p class="faq-item__answer desc">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                  urna, non nisl tincidunt ut elementum turpis.
+                  Wear something that makes you feel comfortable and confident.
+                  Solid colors or subtle patterns tend to work well. Avoid
+                  clothes with large logos or distracting patterns. Feel free to
+                  bring multiple outfits to change into during the session for
+                  different looks.
                 </p>
               </div>
               <!-- Answer toggle -->
@@ -841,11 +877,15 @@
                   class="faq-item__question heading--small"
                   for="answer-toggle4"
                 >
-                  How often can we communicate?
+                  How long does it take to receive the edited photos after the
+                  session?
                 </label>
                 <p class="faq-item__answer desc">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                  urna, non nisl tincidunt ut elementum turpis.
+                  The turnaround time for edited photos depends on the
+                  complexity of the project and the number of images. Typically,
+                  you can expect to receive your edited photos within 4-5 days
+                  after the session. We strive to deliver high-quality,
+                  professionally edited images promptly.
                 </p>
               </div>
               <!-- Answer toggle -->
@@ -861,10 +901,10 @@
         <section class="mood">
           <h2 class="heading">My atmosphere</h2>
           <p class="desc mood__desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
-            non nisl tincidunt ut elementum turpis.
+            Let my photography transport you into the ambiance of the moment,
+            allowing you to relive the emotions and experiences captured within
+            each frame.
           </p>
-          <a href="#!" class="mood__link">@interaction_arif</a>
 
           <!-- Mood group -->
           <div class="mood__img-group">
@@ -872,7 +912,7 @@
               <div class="col-md-4 col">
                 <figure class="mood__img-wrap">
                   <img
-                    src="./assets/images/mood-01.png"
+                    src="./assets/images/mood-01.jpg"
                     alt="mood-01"
                     class="mood__img"
                   />
@@ -881,7 +921,7 @@
               <div class="col-md-4 col">
                 <figure class="mood__img-wrap">
                   <img
-                    src="./assets/images/mood-02.png"
+                    src="./assets/images/mood-03.jpg"
                     alt="mood-02"
                     class="mood__img"
                   />
@@ -890,7 +930,7 @@
               <div class="col-md-4 col">
                 <figure class="mood__img-wrap">
                   <img
-                    src="./assets/images/mood-03.png"
+                    src="./assets/images/mood-02.jpg"
                     alt="mood-03"
                     class="mood__img"
                   />
@@ -918,10 +958,9 @@
           />
           <h2 class="heading contact__heading">Got a project? Let’s talk</h2>
           <p class="contact__desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
-            non nisl tincidunt ut elementum turpis.
+            If you got a inspiration from my works, just make a call.
           </p>
-          <a href="#!" class="btn contact__btn">Book a Call</a>
+          <a href="tel:+84389662855" class="btn contact__btn">Make a call</a>
         </div>
         <img
           src="./assets/images/contact-decor.svg"
@@ -949,23 +988,25 @@
         <!-- Nav on mobile -->
         <nav class="footer__nav">
           <ul class="footer__nav-list">
-            <li><a href="#!" class="footer__nav-item">Projects</a></li>
-            <li><a href="#!" class="footer__nav-item">Journey</a></li>
-            <li><a href="#!" class="footer__nav-item">Service</a></li>
-            <li><a href="#!" class="footer__nav-item">Contact</a></li>
+            <li><a href="#service" class="footer__nav-item">Service</a></li>
+            <li><a href="#project" class="footer__nav-item">Project</a></li>
+            <li><a href="#stat" class="footer__nav-item">Video</a></li>
+            <li><a href="#contact" class="footer__nav-item">Contact</a></li>
           </ul>
         </nav>
 
         <!-- Mail group -->
-        <div href="#!" class="mail-group">
-          <a href="#!" class="circle">
+        <div class="mail-group">
+          <a href="mailto:truongquangle26@gmail.com" class="circle">
             <img
               src="./assets/images/letter.svg"
               alt=""
               class="mail__letter-icon"
             />
           </a>
-          <a href="#!" class="mail__link">hi@arif.interactive</a>
+          <a href="mailto:truongquangle26@gmail.com" class="mail__link"
+            >truongquangle26@gmail.com</a
+          >
         </div>
       </div>
 
@@ -996,20 +1037,13 @@
             <a href="#project" class="nav-item">Projects</a>
           </li>
           <li>
-            <a href="#stat" class="nav-item">Journey</a>
+            <a href="#stat" class="nav-item">Video</a>
           </li>
           <li>
             <a href="#contact" class="nav-item">Contact</a>
           </li>
         </ul>
       </nav>
-
-      <div class="footer__group">
-        <p class="footer__privacy">Privacy Policy | Terms of Conditions</p>
-        <p class="footer__copyright">
-          ©interactiveArif 2021. All rights reserved.
-        </p>
-      </div>
     </footer>
 
     <script src="./script.js"></script>
